--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="colorNavIcon">#dae9f6</color>
-    <color name="colorNavText">#01294b</color>
+    <color name="colorPrimary">#eff154</color>
+    <color name="colorPrimaryDark">#555555</color>
+    <color name="colorAccent">#ccfbff00</color>
+    <color name="colorNavIcon">#686868</color>
+    <color name="colorNavText">#000000</color>
 </resources>
