--- a/app/src/main/res/layout/classes_fragment.xml
+++ b/app/src/main/res/layout/classes_fragment.xml
@@ -1,22 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:orientation="horizontal"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="58dp">
+    android:layout_marginTop="58dp"
+    android:orientation="vertical">
 
-#<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="@string/date"
-    android:layout_marginRight="30dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="30dp"
+        android:text="@string/date" />
+
 
     <Spinner
         android:id="@+id/datespinner"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="46dp"/>
+        tools:layout_editor_absoluteY="46dp" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/classView"
+        android:layout_width="200px"
+        android:layout_height="200px" />
+
+
 </LinearLayout>
