--- a/app/src/main/res/layout/classes_fragment.xml
+++ b/app/src/main/res/layout/classes_fragment.xml
@@ -23,8 +23,8 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/classView"
-        android:layout_width="200px"
-        android:layout_height="200px" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 
 </LinearLayout>
