--- a/app/src/main/res/layout/classes_fragment.xml
+++ b/app/src/main/res/layout/classes_fragment.xml
@@ -11,12 +11,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="30dp"
+        android:layout_gravity="center"
         android:text="@string/date" />
 
 
     <Spinner
         android:id="@+id/datespinner"
         android:layout_width="200dp"
+        android:layout_gravity="center"
         android:layout_height="wrap_content"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="46dp" />
