--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -47,13 +47,22 @@
             android:layout_width="50sp"
             android:layout_height="50sp"
             android:background="@drawable/facebook"
-            android:layout_marginStart="5dp"/>
+            android:layout_marginStart="5dp"
+            />
         <ImageButton
             android:id="@+id/img_button2"
             android:layout_width="50sp"
             android:layout_height="50sp"
-            android:background="@drawable/instagram"/>
+            android:background="@drawable/instagram"
+            />
+            <ImageButton
+                android:id="@+id/img_button3"
+                android:layout_width="50sp"
+                android:layout_height="50sp"
+                android:background="@drawable/twitter"
+               />
         </LinearLayout>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -61,6 +70,7 @@
             android:text="Contact us:"
             android:textStyle="bold"
             android:textSize="18sp"/>
+
         <TextView
             android:layout_marginStart="5dp"
             android:layout_width="wrap_content"
