--- a/app/src/main/res/layout/gyminfo_fragment.xml
+++ b/app/src/main/res/layout/gyminfo_fragment.xml
@@ -11,11 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight=".5">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/colorPrimary" />
+       <com.google.android.gms.maps.MapView
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:id="@+id/map">
+       </com.google.android.gms.maps.MapView>
 
     </RelativeLayout>
     <RelativeLayout
