--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -5,20 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GymInfoFragment"
-    tools:layout_editor_absoluteY="81dp">
-
-    <!-- TODO: Update blank fragment layout -->
+    tools:layout_editor_absoluteY="81dp"
+    android:id="@+id/relativeLayout">
 
     <View
         android:id="@+id/separator_profile_1"
-        android:layout_width="384dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="3dp"
+        android:layout_width="match_parent"
+        android:layout_height="47dp"
         android:background="@color/app_color_gray"
-        app:layout_constraintBottom_toBottomOf="@+id/profile_top_text"
-        app:layout_constraintEnd_toStartOf="@+id/profile_name_input"
-        app:layout_constraintStart_toStartOf="@+id/profile_name_input"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
     <TextView
@@ -29,282 +25,231 @@
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="35sp"
-        app:layout_constraintEnd_toStartOf="@+id/profile_name_input"
-        app:layout_constraintStart_toStartOf="@+id/profile_name_input"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
 
     <TextView
         android:id="@+id/profile_name_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_marginTop="57dp"
         android:text="@string/profile_name_label"
+        android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/profile_name_input"
-        app:layout_constraintStart_toStartOf="@+id/profile_name_input"
-        app:layout_constraintTop_toBottomOf="@+id/profile_top_text" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
         android:id="@+id/profile_name_input"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:textAlignment="center"
-        android:textColor="#ffffff"
+        android:textColor="#000000"
         android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/profile_surname_input"
-        app:layout_constraintStart_toStartOf="@+id/profile_surname_input"
-        app:layout_constraintTop_toBottomOf="@+id/profile_name_label" />
+        app:layout_constraintTop_toBottomOf="@+id/profile_name_label"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <ImageView
         android:id="@+id/profile_name_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="25dp"
-        android:layout_marginTop="6dp"
+        android:layout_marginStart="86dp"
         android:src="@drawable/baseline_edit_black_24dp"
-        app:layout_constraintEnd_toStartOf="@+id/profile_top_text"
-        app:layout_constraintTop_toBottomOf="@+id/separator_profile_1" />
+        app:layout_constraintTop_toTopOf="@+id/profile_name_label"
+        app:layout_constraintStart_toStartOf="parent" />
 
-
-
-    <view
-        android:id="@+id/separator_profile_3"
-        android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:layout_marginBottom="41dp"
-        android:layout_marginTop="41dp"
-        android:background="@color/app_color_granite_grey"
-        app:layout_constraintBottom_toTopOf="@+id/profile_height_input"
-        app:layout_constraintEnd_toStartOf="@+id/profile_surname_input"
-        app:layout_constraintStart_toStartOf="@+id/profile_surname_input"
-        app:layout_constraintTop_toTopOf="@+id/profile_surname_input" />
-
-    <view
-        android:id="@+id/separator_profile_4"
-        android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:layout_marginBottom="150dp"
-        android:layout_marginTop="150dp"
-        android:background="@color/app_color_granite_grey"
-        app:layout_constraintBottom_toTopOf="@+id/separator_profile_6"
-        app:layout_constraintEnd_toStartOf="@+id/profile_height_input"
-        app:layout_constraintStart_toStartOf="@+id/profile_height_input"
-        app:layout_constraintTop_toTopOf="@+id/profile_surname_label" />
-
-    <view
-        android:id="@+id/separator_profile_5"
-        android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:layout_marginBottom="32dp"
-        android:layout_marginTop="32dp"
-        android:background="@color/app_color_granite_grey"
-        app:layout_constraintBottom_toBottomOf="@+id/profile_started_label"
-        app:layout_constraintEnd_toStartOf="@+id/profile_started_input"
-        app:layout_constraintStart_toStartOf="@+id/profile_started_input"
-        app:layout_constraintTop_toTopOf="@+id/profile_weight_input" />
-
-    <view
-        android:id="@+id/separator_profile_6"
-        android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:layout_marginBottom="33dp"
-        android:layout_marginTop="33dp"
-        android:background="@color/app_color_granite_grey"
-        app:layout_constraintBottom_toBottomOf="@+id/profile_id_label"
-        app:layout_constraintEnd_toStartOf="@+id/profile_started_input"
-        app:layout_constraintStart_toStartOf="@+id/profile_started_input"
-        app:layout_constraintTop_toTopOf="@+id/profile_started_input" />
 
     <TextView
         android:id="@+id/profile_surname_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="9dp"
+        android:layout_marginTop="120dp"
         android:text="@string/profile_surname_label"
+        android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/profile_name_input"
-        app:layout_constraintStart_toStartOf="@+id/profile_name_input"
-        app:layout_constraintTop_toBottomOf="@+id/profile_name_input" />
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
         android:id="@+id/profile_surname_input"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
         android:textAlignment="center"
-        android:textColor="#ffffff"
+        android:textColor="#000000"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile_surname_label" />
+        app:layout_constraintTop_toBottomOf="@+id/profile_surname_label"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <ImageView
         android:id="@+id/profile_surname_edit"
-        android:layout_width="wrap_content"
+        android:layout_width="23dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="36dp"
-        android:layout_marginTop="3dp"
         android:src="@drawable/baseline_edit_black_24dp"
-        app:layout_constraintEnd_toStartOf="@+id/profile_surname_label"
-        app:layout_constraintTop_toBottomOf="@+id/separator_profile_2" />
+        app:layout_constraintTop_toTopOf="@+id/profile_surname_label"
+        app:layout_constraintStart_toStartOf="@+id/profile_name_edit" />
 
     <TextView
         android:id="@+id/profile_height_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
-        android:layout_weight="1"
+        android:layout_marginTop="268dp"
         android:text="@string/profile_height_label"
+        android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/profile_surname_input"
-        app:layout_constraintStart_toStartOf="@+id/profile_surname_input"
-        app:layout_constraintTop_toBottomOf="@+id/separator_profile_3" />
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
         android:id="@+id/profile_height_input"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="49dp"
-        android:layout_marginStart="49dp"
         android:textAlignment="center"
-        android:textColor="#ffffff"
+        android:textColor="#000000"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/separator_profile_4"
-        app:layout_constraintEnd_toEndOf="@+id/profile_height_label"
-        app:layout_constraintStart_toStartOf="@+id/profile_weight_label" />
+        app:layout_constraintTop_toBottomOf="@+id/profile_height_label"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <ImageView
         android:id="@+id/profile_height_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="26dp"
-        android:layout_marginTop="3dp"
         android:src="@drawable/baseline_edit_black_24dp"
-        app:layout_constraintEnd_toStartOf="@+id/profile_height_label"
-        app:layout_constraintTop_toBottomOf="@+id/separator_profile_3" />
+        app:layout_constraintTop_toTopOf="@+id/profile_height_label"
+        app:layout_constraintStart_toStartOf="@+id/profile_name_edit" />
 
     <TextView
         android:id="@+id/profile_weight_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_weight="1"
         android:text="@string/profile_weight_label"
+        android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/profile_weight_input"
-        app:layout_constraintStart_toStartOf="@+id/profile_weight_input"
-        app:layout_constraintTop_toBottomOf="@+id/separator_profile_4" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.359" />
 
 
     <TextView
         android:id="@+id/profile_weight_input"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="11dp"
         android:textAlignment="center"
-        android:textColor="#ffffff"
+        android:textColor="#000000"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/profile_started_label"
-        app:layout_constraintStart_toStartOf="@+id/profile_started_label"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profile_weight_label" />
 
     <ImageView
         android:id="@+id/profile_weight_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="27dp"
-        android:layout_marginTop="12dp"
         android:src="@drawable/baseline_edit_black_24dp"
-        app:layout_constraintEnd_toStartOf="@+id/profile_weight_label"
-        app:layout_constraintTop_toBottomOf="@+id/separator_profile_4" />
+        app:layout_constraintTop_toTopOf="@+id/profile_weight_label"
+        app:layout_constraintStart_toStartOf="@+id/profile_name_edit" />
 
     <TextView
         android:id="@+id/profile_started_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_weight="1"
+        android:layout_marginBottom="168dp"
         android:text="@string/profile_date_started"
+        android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/profile_started_input"
-        app:layout_constraintEnd_toStartOf="@+id/profile_started_input"
-        app:layout_constraintStart_toStartOf="@+id/profile_started_input" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
 
     <TextView
         android:id="@+id/profile_started_input"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:layout_marginStart="9dp"
+        android:layout_marginBottom="140dp"
         android:textAlignment="center"
-        android:textColor="#ffffff"
+        android:textColor="#000000"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/profile_id_label"
-        app:layout_constraintStart_toStartOf="@+id/profile_id_label" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <ImageView
         android:id="@+id/profile_started_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="21dp"
-        android:layout_marginTop="8dp"
         android:src="@drawable/baseline_edit_black_24dp"
-        app:layout_constraintEnd_toStartOf="@+id/profile_started_label"
-        app:layout_constraintTop_toBottomOf="@+id/separator_profile_5" />
+        app:layout_constraintTop_toTopOf="@+id/profile_started_label"
+        app:layout_constraintStart_toStartOf="@+id/profile_name_edit" />
 
     <TextView
         android:id="@+id/profile_id_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="9dp"
-        android:layout_weight="1"
+        android:layout_marginBottom="104dp"
         android:text="@string/profile_id"
+        android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/profile_id_input"
-        app:layout_constraintEnd_toStartOf="@+id/profile_id_input"
-        app:layout_constraintStart_toStartOf="@+id/profile_id_input" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
 
     <TextView
         android:id="@+id/profile_id_input"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
         android:textAlignment="center"
-        android:textColor="#ffffff"
+        android:textColor="#000000"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profile_id_label" />
 
     <ImageView
         android:id="@+id/profile_id_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
         android:src="@drawable/baseline_edit_black_24dp"
-        app:layout_constraintEnd_toEndOf="@+id/profile_started_edit"
-        app:layout_constraintStart_toStartOf="@+id/profile_started_edit"
-        app:layout_constraintTop_toBottomOf="@+id/separator_profile_6" />
+        app:layout_constraintTop_toTopOf="@+id/profile_id_label"
+        app:layout_constraintStart_toStartOf="@+id/profile_name_edit" />
 
-    <View
-        android:id="@+id/view2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="45dp"
-        tools:layout_editor_absoluteY="0dp" />
+    <Button
+        android:id="@+id/profile_button_clear"
+        android:layout_width="227dp"
+        android:layout_height="44dp"
+        android:layout_marginBottom="24dp"
+        android:background="@drawable/profile_button_style"
+        android:text="Reset All"
+        android:textColor="#FFFFFF"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
