--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -25,6 +25,7 @@
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="35sp"
+        android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
@@ -36,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="57dp"
         android:text="@string/profile_name_label"
+        android:textStyle="bold"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="20sp"
@@ -72,6 +74,7 @@
         android:layout_marginTop="120dp"
         android:text="@string/profile_surname_label"
         android:textAlignment="center"
+        android:textStyle="bold"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintHorizontal_bias="0.501"
@@ -107,6 +110,7 @@
         android:text="@string/profile_height_label"
         android:textAlignment="center"
         android:textColor="#000000"
+        android:textStyle="bold"
         android:textSize="20sp"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -139,6 +143,7 @@
         android:layout_height="wrap_content"
         android:text="@string/profile_weight_label"
         android:textAlignment="center"
+        android:textStyle="bold"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -176,6 +181,7 @@
         android:layout_marginBottom="168dp"
         android:text="@string/profile_date_started"
         android:textAlignment="center"
+        android:textStyle="bold"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -212,6 +218,7 @@
         android:text="@string/profile_id"
         android:textAlignment="center"
         android:textColor="#000000"
+        android:textStyle="bold"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
