--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#eff154</color>
+    <color name="colorPrimary">#EDFF7A</color>
     <color name="colorPrimaryDark">#555555</color>
-    <color name="colorAccent">#ccfbff00</color>
+    <color name="colorAccent">#EDFF7A</color>
     <color name="colorNavIcon">#686868</color>
     <color name="colorNavText">#000000</color>
     <color name="app_color_granite_grey">#627264</color>
