--- a/app/src/main/res/layout/classes_fragment.xml
+++ b/app/src/main/res/layout/classes_fragment.xml
@@ -7,19 +7,17 @@
     android:orientation="vertical">
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="30dp"
-        android:layout_gravity="center"
-        android:text="@string/date" />
 
 
-    <Spinner
+    <Button
         android:id="@+id/datespinner"
         android:layout_width="200dp"
         android:layout_gravity="center"
         android:layout_height="wrap_content"
+        android:text="@string/date"
+        android:textColor="#FFFFFF"
+        android:background="@drawable/profile_button_style"
+        android:textSize="30sp"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="46dp" />
 
