--- a/app/src/main/res/layout/gyminfo_fragment.xml
+++ b/app/src/main/res/layout/gyminfo_fragment.xml
@@ -61,6 +61,12 @@
                 android:layout_height="50sp"
                 android:background="@drawable/twitter"
                />
+            <ImageButton
+                android:id="@+id/img_button4"
+                android:layout_width="50sp"
+                android:layout_height="50sp"
+                android:background="@drawable/www"
+                />
         </LinearLayout>
 
         <TextView
