--- a/app/src/main/res/layout/content_admin_menu.xml
+++ b/app/src/main/res/layout/content_admin_menu.xml
@@ -24,7 +24,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/classes_btn"
         android:layout_width="227dp"
         android:layout_height="44dp"
         android:layout_marginBottom="8dp"
@@ -44,7 +44,7 @@
 
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/register_btn"
         android:layout_width="238dp"
         android:layout_height="47dp"
         android:layout_marginBottom="8dp"
@@ -58,11 +58,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2"
+        app:layout_constraintTop_toBottomOf="@+id/classes_btn"
         app:layout_constraintVertical_bias="0.205" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/clients_btn"
         android:layout_width="238dp"
         android:layout_height="47dp"
         android:layout_marginBottom="8dp"
@@ -76,6 +76,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2"
-        app:layout_constraintVertical_bias="0.581" />
+        app:layout_constraintTop_toBottomOf="@+id/register_btn"
+        app:layout_constraintVertical_bias="0.383" />
 </android.support.constraint.ConstraintLayout>
