trying to fix mass booking

--- a/app/src/main/res/layout/activity_add_class.xml
+++ b/app/src/main/res/layout/activity_add_class.xml
@@ -238,7 +238,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="296dp"
-        android:text="@string/hours"
+        android:hint="@string/hours"
         android:id="@+id/hours"
         app:layout_constraintHorizontal_bias="0.667"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -249,7 +249,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="296dp"
-        android:text="@string/minutes"
+        android:hint="@string/minutes"
         android:id="@+id/minutes"
         app:layout_constraintHorizontal_bias="0.948"
         app:layout_constraintLeft_toLeftOf="parent"
